Remove quoting from kscreen-console json-output

BUG: 354534
Differential Revision: https://phabricator.kde.org/D3552